_includes/assets/css/inline.css
footer h1 {
  font-size: 5rem;
}

.feature-grid .flex-wrap {
  border: 2px solid #ff8200;
}

.blurbblur {
  background: #000;

  filter: blur(60px);
}

.code-app {
  min-width: 25rem;
}

.token.operator {
  background-color: transparent;
}

html code[class*='language-'],
html pre[class*='language-'] {
  text-shadow: 0 1px #000;
  font-size: 0.75rem;
}

html article.post code[class*='language-'],
html article.post pre[class*='language-'] {
  text-shadow: 0 1px #000;
  font-size: 1rem;
}

html .feature-grid .code-sample code {
  max-width: 18em;
  /* font-size: 0.5rem; */
  /* line-height: 1; */
}

.code-sample {
  transition: transform 0.2s ease-in-out;
}

.my-hero .code-sample {
  transform: rotate(-5deg);
  max-width: 33em;
}

.code-sample:hover {
  transform: scale(1.2);
}

.code-sample pre {
  overflow: scroll;
}

.my-hero {
  background-image: url(./static/img/crowd-blurred.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.shadow {
  box-shadow: 0 0 0 rgba(0, 0, 0, 0.1);
  transition: box-shadow 0.3s ease-in-out;
}

.shadow:hover {
  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
}

.fireproof {
  background: linear-gradient(-45deg, #000000, #ff6f00, #ffa000, #000, #ff8200);
  background-size: 400% 400%;
  animation: gradient 30s ease infinite;
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }

  50% {
    background-position: 100% 50%;
    background-rotate: 180deg;
  }

  100% {
    background-position: 0% 50%;
    background-rotate: 270deg;
  }
}

.copy-icon {
  position: relative;
  height: 1em;
  left: 1rem;
  top: 0em;
  transition: transform 0.2s ease-in-out;
}

#install-command:hover .copy-icon {
  transform: scale(1.1);
  /* Start the shake animation and make the animation last for 0.5 seconds */
  animation: shake 0.75s;

  /* When the animation is finished, start again */
  animation-iteration-count: infinite;
}

@keyframes beat {
  0% {
    background-image: url('/static/img/copied-small.png');
    background-size: 5%;
    /* background-origin: top right; */
  }

  100% {
    background-image: none;
  }

  /* 100% {
			  background-image: url('./copied-small.png');
		  } */
}

#install-command {
  cursor: pointer;
  background-size: 20%;
  background-position: center bottom;
  background-repeat: no-repeat;
  background-image: none;
}

#install-command:focus {
  -webkit-animation: beat 0.3s ease-in-out backwards;
  animation: beat 0.3s ease-in-out backwards;
}

#install-command:active {
  -webkit-animation: none;
  animation: shake 1s ease-in-out;

  /* transition: color 0.2s step-start; */
  color: #ff8200;
}

#install-command:hover {
  /* transition: color 0.2s ease-in-out; */
  color: #ffb700;
}

@keyframes shake {
  0% {
    transform: translate(3px, 3px) rotate(0deg);
  }

  10% {
    transform: translate(-3px, -2px) rotate(-1deg);
  }

  20% {
    transform: translate(-3px, 0px) rotate(1deg);
  }

  30% {
    transform: translate(-3px, 3px) rotate(0deg);
  }

  40% {
    transform: translate(3px, -3px) rotate(1deg);
  }

  50% {
    transform: translate(-3px, 2px) rotate(-1deg);
  }

  60% {
    transform: translate(3px, 2px) rotate(0deg);
  }

  70% {
    transform: translate(3px, 3px) rotate(-1deg);
  }

  80% {
    transform: translate(-3px, -3px) rotate(1deg);
  }

  90% {
    transform: translate(3px, 2px) rotate(0deg);
  }

  100% {
    transform: translate(3px, -2px) rotate(-1deg);
  }
}

/* cube */

.cubeContainer {
  width: 18rem;
  height: 18rem;
  position: relative;
  perspective: 800px;
  margin: 0 auto;
}

#cube {
  width: 100%;
  height: 100%;
  position: absolute;
  transform-style: preserve-3d;
  animation: rotatecube 40s infinite;
  transform-origin: 50% 50% -100px;
  animation-play-state: paused;
}

@media not all and (min-resolution: 0.001dpcm) {
  @media {
    html #cube {
      transform-origin: center;
    }
  }
}

.face .bg-white {
  min-height: 100%;
}

#cube div.face {
  display: block;
  position: absolute;
  overflow: hidden;
  transform-origin: 50% 50% -100px;
}

.front {
  transform: translateZ(100px);
}

.back {
  transform: translateZ(-100px) rotateY(180deg);
}

.right {
  transform: rotateY(-90deg) translateZ(100px);
}

.left {
  transform: rotateY(90deg) translateZ(100px);
}

.top {
  transform: rotateX(-90deg) rotateZ(-90deg) translateZ(100px);
}

.bottom {
  transform: rotateX(90deg) rotateZ(-90deg) translateZ(100px);
}

@keyframes rotatecube {
  0% {
    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
    animation-timing-function: ease;
    animation-duration: 1s;
    animation-fill-mode: forwards;
  }

  20% {
    transform: rotateX(0deg) rotateY(90deg) rotateZ(0deg);
    animation-timing-function: ease;
    animation-duration: 1s;
    animation-fill-mode: forwards;
  }

  40% {
    transform: rotateX(90deg) rotateY(90deg) rotateZ(0deg);
    animation-timing-function: ease;
    animation-duration: 1s;
    animation-fill-mode: forwards;
  }

  60% {
    transform: rotateX(0deg) rotateY(270deg) rotateZ(0deg);
    animation-timing-function: ease;
    animation-duration: 1s;
    animation-fill-mode: forwards;
  }

  80% {
    transform: rotateX(-90deg) rotateY(270deg) rotateZ(0deg);
    animation-timing-function: ease;
    animation-duration: 1s;
    animation-fill-mode: forwards;
  }

  100% {
    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
    animation-timing-function: ease;
    animation-duration: 1s;
    animation-fill-mode: forwards;
  }
}

.github-fork-ribbon:before {
  background-color: #ff6f00;
}

html,
body {
  overflow-x: hidden;
}

body {
  position: relative;
}

article.post p {
  padding-bottom: 1rem;
  text-justify: inter-word;
}

article.post h4 {
  font-size: 1.6rem;
  padding: 0.6rem 0;
  clear: both;
}

article.post h3 {
  font-size: 2rem;
  padding: 1rem 0;
  clear: both;
}

article.post h2 {
  font-size: 2rem;
  padding: 2rem 0;
  text-align: center;
  font-weight: 700;
  clear: both;
}

article.post img {
  width: 22em;
  float: left;
  margin-right: 1em;
  margin-bottom: 1em;
}

article.post ol {
  list-style: decimal;
  padding-left: 2rem;
}
article.post ul {
  list-style: disc;
  padding-left: 2rem;
  margin-bottom: 1rem;
}

article .byline {
  text-align: right;
}

article a {
  text-decoration: underline;
}
.buzzwords li {
  padding-top: 0.75em;
}

form[name='contact'] input,
form[name='contact'] textarea {
  margin: 0.5em 0;
  padding: 4px;
}

a[href$='#subscribe'] {
  color: #011;
  background: linear-gradient(-45deg, #ff0, #ff6f00, #ffa000, #ff0, #ff8200);
  background-size: 400% 400%;
  animation: gradient 30s ease infinite;
  padding: 1rem;
  display: block;
  text-align: center;
  margin: 1rem 10rem;
  border-radius: 0.5rem;
  border: 4px solid #ff8200;
  transition: transform 0.2s ease-in-out;
}

a[href$='#subscribe']:hover {
  color: #009;
  transform: scale(1.2);
}

